# offeragent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  resume.md
scripts/cdp-proxy/: browser-discovery.mjs  cdp-proxy.mjs  check-deps.mjs
src/: __init__.py  applicant.py  cdp_client.py  db.py  filter.py  llm.py  main.py  scraper.py  searcher.py  web.py
